# esp-idf-arduino-rover

./: .gitignore  .gitmodules  README.md  platformio.ini  sdkconfig.esp32-wroom
main/: CMakeLists.txt  Compass.cpp  Compass.hpp  GamePad.cpp  GamePad.hpp  arduinojson_example.cpp  diff_drive_json.cpp  main.c  mpu9250_compass_example.cpp  sketch.cpp
scripts/: README.md  joystick_simple.py  joystick_simple_diff_drive.py  joystick_test.py  requirements.txt  rpi_bluetooth_connection.md
